# Project-UrbanEye

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_carla.txt
.github/workflows/: ci.yml
configs/: project_config.yaml
docs/: ARCHITECTURE.md  PHASES.md  PLAN.md
docs/phases/: phase_01_scaffolding.md  phase_02_sensor_annotation.md  phase_03_data_generator.md  phase_04_augmentation.md  phase_05_training.md  phase_06_domain_adaptation.md  phase_07_bytetrack.md  phase_08_deepsort_dual.md  phase_09_evaluation.md  phase_10_demo.md  phase_11_integration.md  phase_12_release.md  phase_13_deployment.md
hf_space/: README.md  app.py  requirements.txt
scripts/: prepare_dataset.py  train_baseline.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_demo_app.py  test_pipeline_smoke.py
tests/unit/: __init__.py  test_annotation_exporter.py  test_augmentations.py  test_bytetrack.py  test_data_generator.py  test_deepsort.py  test_detection_evaluator.py  test_domain_adapt.py  test_generate_report.py  test_io_helpers.py  test_kalman_filter.py  test_mot_evaluator.py  test_scenario_runner.py  test_sensor_config.py  test_train_config.py  test_visualization.py
urbaneye/: __init__.py
urbaneye/carla/: __init__.py  annotation_exporter.py  carla_config.yaml  data_generator.py  sensor_config.py
urbaneye/carla/scenario_runner/: __init__.py  adverse_weather.py  base_scenario.py  emergency_vehicle.py  pedestrian_crossing.py
urbaneye/demo/: __init__.py  app.py  index.html
urbaneye/evaluation/: __init__.py  detection_evaluator.py  generate_report.py  mot_evaluator.py
urbaneye/tracking/: __init__.py  bytetrack_pipeline.py  deepsort_pipeline.py  dual_tracker.py  kalman_filter.py  utils.py
urbaneye/training/: __init__.py  augmentations.py  dataset.yaml  domain_adapt.py  train_yolov11.py
urbaneye/utils/: __init__.py  constants.py  io_helpers.py  visualization.py
(+2 files in other folders)
